--- a/cssStyle11.html
+++ b/cssStyle11.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .box {
-            border: thick dashed black;
-            /* border-radius: 왼쪽위 오른쪽위 오른쪽아래 왼쪽아래 */
-            border-radius: 50px 40px 20px 10px;
-        }
+      .box {
+        border: thick dashed black;
+        /* border-radius: 왼쪽위 오른쪽위 오른쪽아래 왼쪽아래 */
+        border-radius: 50px 40px 20px 10px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <span>Dummy</span>
     <div class="box">
-        <span>Lorem ipsum dolor sit amet</span>
+      <span>Lorem ipsum dolor sit amet</span>
     </div>
     <span>Dummy</span>
-</body>
+  </body>
 </html>
