--- a/cssStyle9.html
+++ b/cssStyle9.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        div {
-            margin: 10px; padding: 10px;
-            width: 100px; height: 100px;
-            border: 10px solid black;
-        }
+      div {
+        margin: 10px;
+        padding: 10px;
+        width: 100px;
+        height: 100px;
+        border: 10px solid black;
+      }
 
-        div:first-child {
-            background: red;
-            box-sizing: content-box;
-        }
+      div:first-child {
+        background: red;
+        box-sizing: content-box;
+      }
 
-        div:last-child {
-            background: orange;
-            box-sizing: border-box;
-        }
+      div:last-child {
+        background: orange;
+        box-sizing: border-box;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <span>Dummy</span>
     <div id="box">
-        <span>Lorem ipsum dolor sit amet</span>
+      <span>Lorem ipsum dolor sit amet</span>
     </div>
     <div></div>
     <span>Dummy</span>
-</body>
+  </body>
 </html>
