--- a/cssSelector14.html
+++ b/cssSelector14.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        p::first-letter { font-size: 3em; }
-        p::first-line { color: red; }
+      p::first-letter {
+        font-size: 3em;
+      }
+      p::first-line {
+        color: red;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lorem ipsum dolor sit amet</h1>
     <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
-    <p>Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
-</body>
+    <p>
+      Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit
+      amet
+    </p>
+  </body>
 </html>
