--- a/cssSelector17.html
+++ b/cssSelector17.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        a { text-decoration: none; }
-        a:visited { color: red; }
-        
-        /* href 속성을 가지고 있는 a 태그 뒤의 공간에
+      a {
+        text-decoration: none;
+      }
+      a:visited {
+        color: red;
+      }
+
+      /* href 속성을 가지고 있는 a 태그 뒤의 공간에
            "- (href 속성)"을 추가합니다. */
-        a:link::after { content: ' - ' attr(href); }
+      a:link::after {
+        content: " - " attr(href);
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1><a>Nothing</a></h1>
     <h1><a href="http://naver.com/">Naver</a></h1>
     <h1><a href="http://fow.kr/">fow</a></h1>
     <h1><a href="http://op.gg/">opgg</a></h1>
-</body>
+  </body>
 </html>
