--- a/cssSelector2.html
+++ b/cssSelector2.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS3 Selector Basic Page</title>
     <style>
-        h1 { color : red; }
-        p { color : blue; }
+      h1 {
+        color: red;
+      }
+      p {
+        color: blue;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lorem ipsum</h1>
     <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet</p>
-</body>
+  </body>
 </html>
