--- a/cssSelector20.html
+++ b/cssSelector20.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        a { text-decoration: none; }
+      a {
+        text-decoration: none;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>
-        <a href="#">Lorem ipsum dolor amet</a>
+      <a href="#">Lorem ipsum dolor amet</a>
     </h1>
-</body>
+  </body>
 </html>
