--- a/cssSelector4.html
+++ b/cssSelector4.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS3 Selector Basic</title>
     <style>
-        /* class 속성값으로 select를 가지는 태그의 color 속성에 red 키워드 적용 */
-        .select { color: red; }
+      /* class 속성값으로 select를 가지는 태그의 color 속성에 red 키워드 적용 */
+      .select {
+        color: red;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li class="select">Lorem ipsum</li>
-        <li>Lorem ipsum</li>
-        <li class="select">Lorem ipsum</li>
-        <li>Lorem ipsum</li>
+      <li class="select">Lorem ipsum</li>
+      <li>Lorem ipsum</li>
+      <li class="select">Lorem ipsum</li>
+      <li>Lorem ipsum</li>
     </ul>
-</body>
+  </body>
 </html>
