--- a/cssSelector5.html
+++ b/cssSelector5.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS3 Selector Basic</title>
     <style>
-        /* input 태그 중에서 type 속성값을 text로 가지는
+      /* input 태그 중에서 type 속성값을 text로 가지는
            태그의 background 속성에 red 키워드를 적용 */
-        input[type=text] { background: red; }
-        /* input 태그 중에서 type 속성값을 password로 가지는
+      input[type="text"] {
+        background: red;
+      }
+      /* input 태그 중에서 type 속성값을 password로 가지는
            태그의 background 속성에 blue 키워드를 적용 */
-        input[type=password] { background: blue; }
+      input[type="password"] {
+        background: blue;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <form>
-        <input type="text" />
-        <input type="password" />
+      <input type="text" />
+      <input type="password" />
     </form>
-</body>
+  </body>
 </html>
