--- a/cssSelector6.html
+++ b/cssSelector6.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        /* img 태그 중에서 src 속성값이 png로 끝나는 태그의
+      /* img 태그 중에서 src 속성값이 png로 끝나는 태그의
            border 속성에 3px solid red를 적용 */
-        img[src$=png] { border: 3px solid red; }
+      img[src$="png"] {
+        border: 3px solid red;
+      }
 
-        /* img 태그 중에서 src 속성값이 jpg로 끝나는 태그의
+      /* img 태그 중에서 src 속성값이 jpg로 끝나는 태그의
            border 속성에 3px solid green을 적용 */
-        img[src$=jpg] { border: 3px solid green; }
+      img[src$="jpg"] {
+        border: 3px solid green;
+      }
 
-        /* img 태그 중에서 src 속성값이 gif로 끝나는 태그의
+      /* img 태그 중에서 src 속성값이 gif로 끝나는 태그의
            border 속성에 3px solid green을 적용 */
-        img[src$=gif] { border: 3px solid blue; }
+      img[src$="gif"] {
+        border: 3px solid blue;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <img src="sample1.png" width="200" height="250" />
     <img src="sample2.jpg" width="200" height="250" />
     <img src="sample3.gif" width="200" height="250" />
-</body>
+  </body>
 </html>
