--- a/cssSelector7.html
+++ b/cssSelector7.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        /* id 속성값으로 header를 가지는 태그의 후손 위치에 있는 h1 태그의
+      /* id 속성값으로 header를 가지는 태그의 후손 위치에 있는 h1 태그의
         color 속성에 red 키워드를 적용합니다. */
-        #header h1 { color: red; }
+      #header h1 {
+        color: red;
+      }
 
-        /* id 속성값으로 section을 가지는 태그의 후손 위치에 있는 h1 태그의
+      /* id 속성값으로 section을 가지는 태그의 후손 위치에 있는 h1 태그의
         color 속성에 orange 키워드를 적용합니다. */
-        #section h1 { color: orange; }
+      #section h1 {
+        color: orange;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="header">
-        <h1 class="title">CSS3 Selector Basic</h1>
-        <div id="nav">
-            <h1>Navigation</h1>
-        </div>
+      <h1 class="title">CSS3 Selector Basic</h1>
+      <div id="nav">
+        <h1>Navigation</h1>
+      </div>
     </div>
     <div id="section">
-        <h1 class="title">Lorem ipsum</h1>
-        <p>Lorem ipsum dolor sit amet</p>
+      <h1 class="title">Lorem ipsum</h1>
+      <p>Lorem ipsum dolor sit amet</p>
     </div>
-        <h2>Lorem ipsum</h2>
-</body>
+    <h2>Lorem ipsum</h2>
+  </body>
 </html>
