--- a/cssStyle2.html
+++ b/cssStyle2.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        * { font-size: 12px; }
+      * {
+        font-size: 12px;
+      }
 
-        h1 { font-size: 3.0em; }
-        h2 { font-size: 1.5em; }
+      h1 {
+        font-size: 3em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lorem ipsum dolor sit amet</h1>
-    <h2>consectetur adipiscing elit. consectetur adipiscing elit. </h2>
-    <p>consectetur adipiscing elit. consectetur adipiscing elit. consectetur adipiscing elit. </p>
-</body>
+    <h2>consectetur adipiscing elit. consectetur adipiscing elit.</h2>
+    <p>
+      consectetur adipiscing elit. consectetur adipiscing elit. consectetur
+      adipiscing elit.
+    </p>
+  </body>
 </html>
