--- a/cssStyle4.html
+++ b/cssStyle4.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        #box {
-            visibility: hidden;
-        }
+      #box {
+        visibility: hidden;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <span>Dummy</span>
     <div id="box">
-        <span>Lorem ipsum dolor sit amet</span>
+      <span>Lorem ipsum dolor sit amet</span>
     </div>
     <span>Dummy</span>
-</body>
+  </body>
 </html>
