--- a/cssStyle5.html
+++ b/cssStyle5.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        #box {
-            background-color: black;
-            color: white;
+      #box {
+        background-color: black;
+        color: white;
 
-            opacity: 0.2;
-        }
+        opacity: 0.2;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <span>Dummy</span>
     <div id="box">
-        <span>Lorem ipsum dolor sit amet</span>
+      <span>Lorem ipsum dolor sit amet</span>
     </div>
     <span>Dummy</span>
-</body>
+  </body>
 </html>
