--- a/cssStyle7.html
+++ b/cssStyle7.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        div {
-        width: 100px; height: 100px;
+      div {
+        width: 100px;
+        height: 100px;
         background-color: red;
 
         border: 20px solid black;
-        margin: 10px; padding: 30px;
-        }
-
+        margin: 10px;
+        padding: 30px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <span>Dummy</span>
     <div id="box">
-        <span>Lorem ipsum dolor sit amet</span>
+      <span>Lorem ipsum dolor sit amet</span>
     </div>
     <span>Dummy</span>
-</body>
+  </body>
 </html>
